--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@actions/core": "^1.10.0",
-    "bent": "^7.3.12"
+    "express": "^4.18.2",
+    "node-cmd": "^5.0.0"
   },
   "devDependencies": {
     "@readme/eslint-config": "^10.1.3",
