--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "bugs": {
     "url": "https://github.com/ruxyolo/glitchSyncTest/issues"
   },
+  "engines": {
+    "node": "16.x"
+  },
   "homepage": "https://github.com/ruxyolo/glitchSyncTest#readme",
   "dependencies": {
     "express": "^4.18.2"
